# ChangeLog for app-arch/zpaq
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Nov 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  zpaq-1.09.ebuild:
  Install LZP preprocessor in libexec, small fixes.

  31 Oct 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -zpaq-1.04.ebuild, +zpaq-1.09.ebuild, metadata.xml:
  Version bump.

  20 Sep 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -zpaq-1.03a.ebuild, +zpaq-1.04.ebuild:
  Version bump.

  09 Sep 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -zpaq-1.02.ebuild, +zpaq-1.03a.ebuild:
  Version bump.

  17 Jul 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +zpaq-1.02.ebuild, +metadata.xml:
  New ebuild for bug #278021. Thanks to lazy_bum, TomJBE & Tommy[D] for
  suggestions.
