@@ -1,4 +1,5 @@
-DIST zpaq109.zip 94431 RMD160 5176503996b530f58d4a468f9b954567109f3788 SHA1 7c175595a0187a10c08ddc06f1857622db06978c SHA256 97a25847ecb01f12c21c4b9edae305b0622bb48625cc1a3d5b2cfb9e66591576
-EBUILD zpaq-1.09.ebuild 1629 RMD160 7db80fd17f40c70135d1b65739e84b33eba4f755 SHA1 42d20f35196de3e2852e02cfb7355ce2463b055d SHA256 66c5222ae32a82855beb77406d8bf279fa5444421a54e43afab1e74d6fa445a8
-MISC ChangeLog 818 RMD160 41294c86e29f5c1be1d9eb8335f42275457e9232 SHA1 055b4d8758482015e6761f10fc725d3dc52f1f87 SHA256 00663a6b64504a2689cc82eb1cfa7f000b444f4ecf2b8b2a1787953a23b35261
-MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
+AUX zpaqmake.in 198 RMD160 cbc092ba9badb34ab5f37d9492126bfafecc9174 SHA1 59b1208001bea49b2ce578b4767855e02aee78ad SHA256 d548855b7d357a0659f6272e759d291d0afca7816495ac31e2be53836b9826a3
+DIST zpaq110.zip 94403 RMD160 bc9d5c549cfecdea62f30aaa31ea66a642913e7a SHA1 266a5146fc42ccd2c0631701be4529a2740cd23f SHA256 af2564b2ebc7ecb370cd0ed24e30a92bc8ca4ad256c63174b1a83fade88245e8
+EBUILD zpaq-1.10.ebuild 2596 RMD160 a715f91e6bcd6d9330154195bb3bdc7777740a9d SHA1 f72e753b53a0e3ef37dec120768d5672e8634566 SHA256 2e6681b2f9af9ea30cd1100df7338be389c3d350232ea08d0afb848acbd92b02
+MISC ChangeLog 1011 RMD160 049f08047d75d6ae86a7841646d3f0aae9c68bf7 SHA1 6bf54f9ca6d37ae4fde84bcefc1ecb3cb88def2b SHA256 2bb699d3b942321d11de5e81b743f730269a6d51586eb3d72eead5549d7460e5
+MISC metadata.xml 304 RMD160 739c9d04e648fdd762da968fce83dba7da1b8a71 SHA1 6f1bc945c848487545a5c0b3ce46a3b69ca877ef SHA256 7aef31d94c7145199f824eefcaf2e5c2d5a437d7fffe63f49c38a1dda5b7b2ec
