@@ -2,4 +2,8 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='optimization'>Install additional files required to support
+			ZPAQ's optimized compression mode.</flag>
+	</use>
 </pkgmetadata>
