@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/zpaq
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Feb 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
+  -zpaq-1.09.ebuild, +zpaq-1.10.ebuild, +files/zpaqmake.in, metadata.xml:
+  Version bump. Support for ZPAQ's self-optimization.
 
   01 Nov 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
   zpaq-1.09.ebuild:
